syntax = "proto3";

import "user-dto.proto";

package com.example.user.gen.grpc;
option java_multiple_files = true;


message GrpcUserFilterRequest {
  int64  id = 1;
  string name = 2;
  string email = 3;
}

message GrpcUserIdRequest {
  int64  id = 1;
}

message GrpcUserCreateRequest {
  string name = 2;
  string email = 3;
}

message GrpcUserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message GrpcItemUserResponse {
  repeated GrpcUserResponse users = 1;
}